--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,18 @@
     <script src="logic.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <form>
+            <div class="display">
+                <input type="text">
+            </div>
+            <div class="inputs">
+                <input type="button" value="CE">
+                <input type="button" value="CE">
+                <input type="button" value="CE">
+                <input type="button" value="CE">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
