Added the first row of buttons

--- a/calculator.html
+++ b/calculator.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <div class="container">
-        <form>
+        <form class="calc-body">
             <div class="display">
-                <input type="text">
+                <input type="text" placeholder="000" id="display">
             </div>
             <div class="inputs">
-                <input type="button" value="CE">
-                <input type="button" value="CE">
-                <input type="button" value="CE">
-                <input type="button" value="CE">
+                <input type="button" value="AC">
+                <input type="button" value="DE">
+                <input type="button" value=".">
+                <input type="button" value="/">
             </div>
         </form>
     </div>
