Undid the DM button

--- a/calculator.html
+++ b/calculator.html
@@ -41,7 +41,7 @@
             <div class="inputs" id="bottom">
                 <input type="button" value="00">
                 <input type="button" value="0">
-                <input type="button" value="=">
+                <input type="button" value="=" class="equal-sign">
                 
             </div>
         </form>
