Removed the placeholder text on display

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,7 @@
     <div class="container">
         <form class="calc-body">
             <div class="display">
-                <input type="text" placeholder="000" id="display">
+                <input type="text" id="display">
             </div>
             <div class="inputs">
                 <input type="button" value="AC">
