--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@
             </div>
             <div class="inputs">
                 <input type="button" value="AC">
-                <input type="button" value="DE">
+                <input type="button" value="DEL">
                 <input type="button" value=".">
                 <input type="button" value="/">
             </div>
