Added 'clear' ID to the AC button

--- a/calculator.html
+++ b/calculator.html
@@ -18,7 +18,7 @@
                 <input type="text" id="display">
             </div>
             <div class="inputs">
-                <input type="button" value="AC" class="delete">
+                <input type="button" value="AC" id="clear" onclick="clearField()" class="delete">
                 <input type="button" value="DEL" class="delete">
                 <input type="button" value="." class="sign">
                 <input type="button" value="/" class="sign">
