Disabled the = button by default

--- a/calculator.html
+++ b/calculator.html
@@ -44,7 +44,7 @@
             <div class="inputs" id="bottom">
                 <input type="button" value="00">
                 <input type="button" value="0">
-                <input type="button" value="=" class="equal-sign sign">
+                <input type="button" value="=" class="equal-sign sign" disabled>
                 
             </div>
         </form>
