Removed automcplete. Maxlength set to 10

--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
     <div class="container">
         <form class="calc-body">
             <div class="display">
-                <input type="text" id="display" class="display" contenteditable="false">
+                <input type="text" autocomplete="off" maxlength="10" id="display" class="display" contenteditable="false">
             </div>
             <div class="inputs">
                 <input type="button" value="AC" id="clear" onclick="clearField()" class="delete">
