Assigned each number button an onclick()

--- a/calculator.html
+++ b/calculator.html
@@ -23,26 +23,26 @@
                 <input type="button" value="/" class="sign">
             </div>
             <div class="inputs">
-                <input type="button" value="9">
-                <input type="button" value="8">
-                <input type="button" value="7">
+                <input type="button" value="9" onclick="appendVal(this.value)">
+                <input type="button" value="8" onclick="appendVal(this.value)">
+                <input type="button" value="7" onclick="appendVal(this.value)">
                 <input type="button" value="*" class="sign">
             </div>
             <div class="inputs">
-                <input type="button" value="6">
-                <input type="button" value="5">
-                <input type="button" value="4">
+                <input type="button" value="6" onclick="appendVal(this.value)">
+                <input type="button" value="5" onclick="appendVal(this.value)">
+                <input type="button" value="4" onclick="appendVal(this.value)">
                 <input type="button" value="-" class="sign">
             </div>
             <div class="inputs">
-                <input type="button" value="3">
-                <input type="button" value="2">
-                <input type="button" value="1">
+                <input type="button" value="3" onclick="appendVal(this.value)">
+                <input type="button" value="2" onclick="appendVal(this.value)">
+                <input type="button" value="1" onclick="appendVal(this.value)">
                 <input type="button" value="+" class="sign">
             </div>
             <div class="inputs" id="bottom">
-                <input type="button" value="00">
-                <input type="button" value="0">
+                <input type="button" value="00" onclick="appendVal(this.value)">
+                <input type="button" value="0" onclick="appendVal(this.value)">
                 <input type="button" value="=" id="button" class="equal-sign sign" disabled>         
             </div>
         </form>
