--- a/calculator.html
+++ b/calculator.html
@@ -14,11 +14,11 @@
     <div class="container">
         <form class="calc-body">
             <div class="display">
-                <input type="text" autocomplete="off" maxlength="10" id="display" class="display" contenteditable="false">
+                <input type="text" autocomplete="off" pattern="[0-9./+=-*]{1,10}" maxlength="10" id="display" class="display" contenteditable="false">
             </div>
             <div class="inputs">
                 <input type="button" value="AC" id="clear" onclick="clearField()" class="delete">
-                <input type="button" value="DEL" class="delete">
+                <input type="button" value="DEL" class="delete" onclick="del()">
                 <input type="button" value="." class="sign">
                 <input type="button" value="/" class="sign">
             </div>
