Tested it with the . button

--- a/calculator.html
+++ b/calculator.html
@@ -19,7 +19,7 @@
             <div class="inputs">
                 <input type="button" value="AC" id="clear" onclick="clearField()" class="delete">
                 <input type="button" value="DEL" class="delete" onclick="del()">
-                <input type="button" value="." class="sign">
+                <input type="button" value="." class="sign" onclick="signIt(this.value)">
                 <input type="button" value="/" class="sign">
             </div>
             <div class="inputs">
