--- a/calculator.html
+++ b/calculator.html
@@ -20,25 +20,25 @@
                 <input type="button" value="AC" id="clear" onclick="clearField()" class="delete">
                 <input type="button" value="DEL" class="delete" onclick="del()">
                 <input type="button" value="." class="sign" onclick="signIt(this.value)">
-                <input type="button" value="/" class="sign">
+                <input type="button" value="/" class="sign" onclick="signIt(this.value)">
             </div>
             <div class="inputs">
                 <input type="button" value="9" onclick="appendVal(this.value)">
                 <input type="button" value="8" onclick="appendVal(this.value)">
                 <input type="button" value="7" onclick="appendVal(this.value)">
-                <input type="button" value="*" class="sign">
+                <input type="button" value="*" class="sign" onclick="signIt(this.value)">
             </div>
             <div class="inputs">
                 <input type="button" value="6" onclick="appendVal(this.value)">
                 <input type="button" value="5" onclick="appendVal(this.value)">
                 <input type="button" value="4" onclick="appendVal(this.value)">
-                <input type="button" value="-" class="sign">
+                <input type="button" value="-" class="sign" onclick="signIt(this.value)">
             </div>
             <div class="inputs">
                 <input type="button" value="3" onclick="appendVal(this.value)">
                 <input type="button" value="2" onclick="appendVal(this.value)">
                 <input type="button" value="1" onclick="appendVal(this.value)">
-                <input type="button" value="+" class="sign">
+                <input type="button" value="+" class="sign" onclick="signIt(this.value)">
             </div>
             <div class="inputs" id="bottom">
                 <input type="button" value="00" onclick="appendVal(this.value)">
