Format the diplay

--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -13,10 +13,10 @@
             <form id="calculator">
                 <div class="display">
                     <div class="top">
-                        <label id="top">Top</label>
+                        <label id="top">Operations</label>
                     </div>
                     <div class="bottom">
-                        <label id="bottom">Bottom</label>
+                        <label id="bottom">Output</label>
                     </div>
                 </div>
                
