--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -18,6 +18,38 @@
                     <div class="bottom">
                         <label id="bottom">Output</label>
                     </div>
+                    <div class="buttons">
+                        <div class="row">
+                            <input type='button' id="AC" value="AC"></input>
+                            <input type='button' id="DEL" value="DEL"></input>
+                            <input type='button' id="exp" value="^"></input>
+                            <input type='button' class="sign" id="divide" value="/"></input>
+                        </div>
+                        <div class="row">
+                            <input type='button' class="number" value="9"></input>
+                            <input type='button' class="number" value="8"></input>
+                            <input type='button' class="number" value="7"></input>
+                            <input type='button' class="sign" id="times"value="X"></input>
+                        </div>
+                        <div class="row">
+                            <input type='button' class="number" value="6"></input>
+                            <input type='button' class="number" value="5"></input>
+                            <input type='button' class="number" value="4"></input>
+                            <input type='button' class="sign" id="add" value="+"></input>
+                        </div>
+                        <div class="row">
+                            <input type='button' class="number" value="3"></input>
+                            <input type='button' class="number" value="2"></input>
+                            <input type='button' class="number" value="1"></input>
+                            <input type='button' class="sign" id="minus" value="-"></input>
+                        </div>
+                        <div class="row">
+                            <input type='button' class="number" id="zero" value="0"></input>
+                            <input type='button' class="sign" id="dot" value="."></input>
+                            <input type='button' class="sign" id="sqrt" value="sqrt"></input>
+                            <input type='button' id="equal-sign" value="="></button>
+                        </div>
+                    </div>
                 </div>
                
             </form>
