Updated delete class. And hover effects

--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -20,9 +20,9 @@
                     </div>
                     <div class="buttons">
                         <div class="row">
-                            <input type='button' id="AC" value="AC"></input>
-                            <input type='button' id="DEL" value="DEL"></input>
-                            <input type='button' id="exp" value="^"></input>
+                            <input type='button' id="AC" class="deletes" value="AC"></input>
+                            <input type='button' id="DEL" class="deletes" value="DEL"></input>
+                            <input type='button' id="exp" class="sign" value="^"></input>
                             <input type='button' class="sign" id="divide" value="/"></input>
                         </div>
                         <div class="row">
