--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marbacus</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
     <div id="container">
@@ -13,41 +12,41 @@
             <form id="calculator">
                 <div class="display">
                     <div class="top">
-                        <label id="top">Operations</label>
+                        <label id="top"></label>
                     </div>
                     <div class="bottom">
-                        <label id="bottom">Output</label>
+                        <label id="bottom">0</label>
                     </div>
                     <div class="buttons">
                         <div class="row">
-                            <input type='button' id="AC" class="deletes" value="AC"></input>
-                            <input type='button' id="DEL" class="deletes" value="DEL"></input>
-                            <input type='button' id="exp" class="sign" value="^"></input>
-                            <input type='button' class="sign" id="divide" value="/"></input>
+                            <input type='button' id="AC" class="deletes" value="AC" onclick="clearLabelText()">
+                            <input type='button' id="DEL" class="deletes" value="DEL">
+                            <input type='button' id="exp" class="sign" value="^">
+                            <input type='button' class="sign" id="divide" value="/">
                         </div>
                         <div class="row">
-                            <input type='button' class="number" value="9"></input>
-                            <input type='button' class="number" value="8"></input>
-                            <input type='button' class="number" value="7"></input>
-                            <input type='button' class="sign" id="times"value="X"></input>
+                            <input type='button' class="number" value="9" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" value="8" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" value="7" onclick="appendNumber(this.value)">
+                            <input type='button' class="sign" id="times"value="X">
                         </div>
                         <div class="row">
-                            <input type='button' class="number" value="6"></input>
-                            <input type='button' class="number" value="5"></input>
-                            <input type='button' class="number" value="4"></input>
-                            <input type='button' class="sign" id="add" value="+"></input>
+                            <input type='button' class="number" value="6" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" value="5" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" value="4" onclick="appendNumber(this.value)">
+                            <input type='button' class="sign" id="add" value="+">
                         </div>
                         <div class="row">
-                            <input type='button' class="number" value="3"></input>
-                            <input type='button' class="number" value="2"></input>
-                            <input type='button' class="number" value="1"></input>
-                            <input type='button' class="sign" id="minus" value="-"></input>
+                            <input type='button' class="number" value="3" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" value="2" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" value="1" onclick="appendNumber(this.value)">
+                            <input type='button' class="sign" id="minus" value="-">
                         </div>
                         <div class="row">
-                            <input type='button' class="number" id="zero" value="0"></input>
-                            <input type='button' class="sign" id="dot" value="."></input>
-                            <input type='button' class="sign" id="sqrt" value="sqrt"></input>
-                            <input type='button' id="equal-sign" value="="></button>
+                            <input type='button' class="number" id="zero" value="0" onclick="appendNumber(this.value)">
+                            <input type='button' class="number" id="dot" value="." onclick="appendNumber(this.value)">
+                            <input type='button' class="sign" id="sqrt" value="sqrt">
+                            <input type='button' id="equal-sign" value="=">
                         </div>
                     </div>
                 </div>
@@ -56,7 +55,5 @@
         </div>
     </div>
 </body>
-<footer>
-    <script src="script.js"></script>
-</footer>
+<script src="script.js"></script>
 </html>
