Allow the equal sign to work with + operand.

--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -46,7 +46,7 @@
                             <input type='button' class="number" id="zero" value="0" onclick="appendNumber(this.value)">
                             <input type='button' class="number" id="dot" value="." onclick="dotIT(this.value)">
                             <input type='button' class="sign" id="sqrt" value="&Sqrt;">
-                            <input type='button' id="equal-sign" value="=" onclick="compute()">
+                            <input type='button' id="equal-sign" value="=" onclick="displayFinal()">
                         </div>
                     </div>
                 </div>
