Refactored repeating actions into functions

--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="buttons">
                         <div class="row">
-                            <input type='button' id="AC" class="deletes" value="AC" onclick="clearLabelText()">
+                            <input type='button' id="AC" class="deletes" value="AC" onclick="clearAll()">
                             <input type='button' id="DEL" class="deletes" value="DEL" onclick="delEat()">
                             <input type='button' id="exp" class="sign" value="^">
                             <input type='button' class="sign" id="divide" value="/">
