--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -28,7 +28,7 @@
                             <input type='button' class="number" value="9" onclick="appendNumber(this.value)">
                             <input type='button' class="number" value="8" onclick="appendNumber(this.value)">
                             <input type='button' class="number" value="7" onclick="appendNumber(this.value)">
-                            <input type='button' class="sign" id="times"value="X">
+                            <input type='button' class="sign" id="times" value="X">
                         </div>
                         <div class="row">
                             <input type='button' class="number" value="6" onclick="appendNumber(this.value)">
@@ -40,7 +40,7 @@
                             <input type='button' class="number" value="3" onclick="appendNumber(this.value)">
                             <input type='button' class="number" value="2" onclick="appendNumber(this.value)">
                             <input type='button' class="number" value="1" onclick="appendNumber(this.value)">
-                            <input type='button' class="sign" id="minus" value="-">
+                            <input type='button' class="sign" id="minus" value="-" onclick="myNus(this.value)">
                         </div>
                         <div class="row">
                             <input type='button' class="number" id="zero" value="0" onclick="appendNumber(this.value)">
