Re-placed the 0 text in bottom label

--- a/Mark II/index.html
+++ b/Mark II/index.html
@@ -15,7 +15,7 @@
                         <label id="top"></label>
                     </div>
                     <div class="bottom">
-                        <label id="bottom" aria-placeholder="0"></label>
+                        <label id="bottom">0</label>
                     </div>
                     <div class="buttons">
                         <div class="row">
