--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <ul class="list-container">
+                <li class="theme-select">Dark</li>
+                <li class="theme-select">Light</li>
+                <li class="theme-select">Monochrome</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
