rough work outlines and visualizations

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -13,9 +13,20 @@
             <ul class="list-container">
                 <li class="theme-select">Dark</li>
                 <li class="theme-select">Light</li>
-                <li class="theme-select">Monochrome</li>
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="calc-body">
+            <div class="display">
+                <div class="top">
+                    <label id="top">Top text</label>
+                </div>
+                <div class="bottom">
+                    <label id="bottom">Bottom text</label>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
