--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -25,6 +25,38 @@
                 <div class="bottom">
                     <label id="bottom">Bottom text</label>
                 </div>
+                <div class="buttons">
+                    <div class="row">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                    </div>
+                    <div class="row">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                    </div>
+                    <div class="row">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                    </div>
+                    <div class="row">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                    </div>
+                    <div class="row">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                        <input type="button" value="">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
