Testing out high scontrast buttons

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -27,8 +27,8 @@
                 </div>
                 <div class="buttons">
                     <div class="row">
-                        <input type="button" value="">
-                        <input type="button" value="">
+                        <input type="button" value="AC">
+                        <input type="button" value="DEL">
                         <input type="button" value="">
                         <input type="button" value="">
                     </div>
