Margin fix for display, 0 text bottom

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -20,10 +20,10 @@
         <div class="calc-body">
             <div class="display">
                 <div class="top">
-                    <label id="top">Top text</label>
+                    <label id="top"></label>
                 </div>
                 <div class="bottom">
-                    <label id="bottom">Bottom text</label>
+                    <label id="bottom">0</label>
                 </div>
                 <div class="buttons">
                     <div class="row">
