--- a/HTML,CSS,JS/Mark II/index.html
+++ b/HTML,CSS,JS/Mark II/index.html
@@ -45,7 +45,7 @@
                         <div class="row">
                             <input type='button' class="number" id="zero" value="0" onclick="appendNumber(this.value)">
                             <input type='button' class="number" id="dot" value="." onclick="dotIT(this.value)">
-                            <input type='button' class="sign" id="sqrt" value="&Sqrt;" disabled>
+                            <input type='button' class="sign" id="sqrt" value="&Sqrt;" onclick="squareRoot()">
                             <input type='button' id="equal-sign" value="=" onclick="displayFinal()">
                         </div>
                     </div>
