--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="main-body">
-        
+        <div class="display">
+            <div class="topDisplay"></div>
+            <div class="bottomDisplay"></div>
+        </div>
     </div>
 </body>
 </html>
