Display position and coloring

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -10,8 +10,12 @@
 <body>
     <div class="main-body">
         <div class="display">
-            <div class="topDisplay"></div>
-            <div class="bottomDisplay"></div>
+            <div class="topDisplay">
+                <label class="topContent">12345</label>
+            </div>
+            <div class="bottomDisplay">
+                <label class="bottomContent">0</label>
+            </div>
         </div>
     </div>
 </body>
