Added buttons, styled them

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -11,12 +11,56 @@
     <div class="main-body">
         <div class="display">
             <div class="topDisplay">
-                <label class="topContent">12345</label>
+                <label class="topContent"></label>
             </div>
             <div class="bottomDisplay">
                 <label class="bottomContent">0</label>
             </div>
         </div>
+        <div class="buttons-panel">
+  <div class="row" id="row-1">
+    <input type="button" value="AC" class="deletor">
+    <input type="button" value="DEL" class="deletor">
+    <input type="button" value="CE" class="deletor">
+    <input type="button" value="(" class="operator">
+    <input type="button" value=")" class="operator">
+  </div>
+  <div class="row" id="row-2">
+    <input type="button" value="D" class="letter" disabled>
+    <input type="button" value="E" class="letter" disabled>
+    <input type="button" value="F" class="letter" disabled>
+    <input type="button" value="!" class="operator">
+    <input type="button" value="/" class="operator">
+  </div>
+  <div class="row" id="row-3">
+    <input type="button" value="C" class="letter" disabled>
+    <input type="button" value="7" class="number">
+    <input type="button" value="8" class="number">
+    <input type="button" value="9" class="number">
+    <input type="button" value="X" class="operator">
+  </div>
+  <div class="row" id="row-4">
+    <input type="button" value="B" class="letter" disabled>
+    <input type="button" value="4" class="number">
+    <input type="button" value="5" class="number">
+    <input type="button" value="6" class="number">
+    <input type="button" value="-" class="operator">
+  </div>
+  <div class="row" id="row-5">
+    <input type="button" value="A" class="letter" disabled>
+    <input type="button" value="1" class="number">
+    <input type="button" value="2" class="number">
+    <input type="button" value="3" class="number">
+    <input type="button" value="+" class="operator">
+  </div>
+  <div class="row" id="row-6">
+    <input type="button" value="^" class="operator">
+    <input type="button" value="+/-" class="operator">
+    <input type="button" value="0" class="number">
+    <input type="button" value="." class="operator">
+    <input type="button" value="=" class="operator">
+  </div>
+</div>
     </div>
 </body>
 </html>
