--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marbacus III</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="main-body">
@@ -63,4 +62,7 @@
 </div>
     </div>
 </body>
+<footer>
+    <script src="script.js"></script>
+</footer>
 </html>
