--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -6,6 +6,15 @@
     <title>Marbacus III</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<header>
+    <nav id="nav-bar">
+        <ul class="navbar">
+            <li class="theme-select" h>Midnight</li>
+            <li class="theme-select">Lava</li>
+            <li class="theme-select">Snow</li>
+        </ul>
+    </nav>
+</header>
 <body>
     <div class="main-body">
         <div class="display">
@@ -62,7 +71,8 @@
 </div>
     </div>
 </body>
-<footer>
+<br>
+<footer class="bottomGear">
     <script src="script.js"></script>
 </footer>
 </html>
