--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -29,7 +29,7 @@
         <div class="buttons-panel">
   <div class="row" id="row-1">
     <input type="button" value="AC" class="deletor" onclick="">
-    <input type="button" value="DEL" class="deletor">
+    <input type="button" value="DEL" class="deletor" onclick="deleteCut()">
     <input type="button" value="CE" class="deletor" onclick="clearBottom()">
     <input type="button" value="(" class="operator">
     <input type="button" value=")" class="operator">
