Theme switching via cssfile switching

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marbacus III</title>
-    <link id="styles_header" rel="stylesheet" href="styles.css">
+    <link id="styles_header" rel="stylesheet" href="styles_red.css">
     <script src="script.js" defer></script>
 </head>
 <header>
     <nav id="nav-bar">
         <ul class="navbar">
-            <li class="theme-select">Midnight</li>
-            <li class="theme-select">Lava</li>
-            <li class="theme-select">Snow</li>
+            <li class="theme-select" onclick="changeThemeMidnight()">Midnight</li>
+            <li class="theme-select" onclick="changeThemeLava()">Lava</li>
+            <li class="theme-select" onclick="changeThemeSnow()" >Snow</li>
         </ul>
     </nav>
 </header>
