Realizing 3 css files is bad

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -10,9 +10,9 @@
 <header>
     <nav id="nav-bar">
         <ul class="navbar">
-            <li class="theme-select" onclick="changeThemeMidnight()">Midnight</li>
-            <li class="theme-select" onclick="changeThemeLava()">Lava</li>
-            <li class="theme-select" onclick="changeThemeSnow()" >Snow</li>
+            <li class="theme-select" onclick="changeThemeMidnight()"><a href="#">Midnight</a></li>
+            <li class="theme-select" onclick="changeThemeLava()"><a href="#">Lava</a></li>
+            <li class="theme-select" onclick="changeThemeSnow()"><a href="#">Snow</a></li>
         </ul>
     </nav>
 </header>
