Number buttons work

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -43,29 +43,29 @@
   </div>
   <div class="row" id="row-3">
     <input type="button" value="C" class="letter" disabled>
-    <input type="button" value="7" class="number">
-    <input type="button" value="8" class="number">
-    <input type="button" value="9" class="number">
+    <input type="button" value="7" class="number" onclick="appendNumber(this.value)">
+    <input type="button" value="8" class="number" onclick="appendNumber(this.value)">
+    <input type="button" value="9" class="number" onclick="appendNumber(this.value)">
     <input type="button" value="X" class="operator">
   </div>
   <div class="row" id="row-4">
     <input type="button" value="B" class="letter" disabled>
-    <input type="button" value="4" class="number">
-    <input type="button" value="5" class="number">
-    <input type="button" value="6" class="number">
+    <input type="button" value="4" class="number" onclick="appendNumber(this.value)">
+    <input type="button" value="5" class="number" onclick="appendNumber(this.value)">
+    <input type="button" value="6" class="number" onclick="appendNumber(this.value)">
     <input type="button" value="-" class="operator">
   </div>
   <div class="row" id="row-5">
     <input type="button" value="A" class="letter" disabled>
-    <input type="button" value="1" class="number">
-    <input type="button" value="2" class="number">
-    <input type="button" value="3" class="number">
+    <input type="button" value="1" class="number" onclick="appendNumber(this.value)">
+    <input type="button" value="2" class="number" onclick="appendNumber(this.value)">
+    <input type="button" value="3" class="number"onclick="appendNumber(this.value)">
     <input type="button" value="+" class="operator">
   </div>
   <div class="row" id="row-6">
     <input type="button" value="^" class="operator">
     <input type="button" value="+/-" class="operator">
-    <input type="button" value="0" class="number">
+    <input type="button" value="0" class="number" onclick="appendNumber(this.value)">
     <input type="button" value="." class="operator">
     <input type="button" value="=" class="operator">
   </div>
