nothing serious before pull

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -9,7 +9,7 @@
 <header>
     <nav id="nav-bar">
         <ul class="navbar">
-            <li class="theme-select" h>Midnight</li>
+            <li class="theme-select">Midnight</li>
             <li class="theme-select">Lava</li>
             <li class="theme-select">Snow</li>
         </ul>
