Disabled brackets for now

--- a/HTML,CSS,JS/Mark III/index.html
+++ b/HTML,CSS,JS/Mark III/index.html
@@ -38,8 +38,8 @@
     <input type="button" value="AC" class="deletor" onclick="clearAll()">
     <input type="button" value="DEL" class="deletor" onclick="deleteCut()">
     <input type="button" value="CE" class="deletor" onclick="clearBottom()">
-    <input type="button" value="(" class="operator">
-    <input type="button" value=")" class="operator">
+    <input type="button" value="(" class="operator" disabled>
+    <input type="button" value=")" class="operator" disabled>
   </div>
   <div class="row" id="row-2">
     <input type="button" value="D" class="letter" disabled onclick="appendNumber(this.value)">
